# i18n-inflector

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checks.yml  ci.yml
i18n_inflector/: Cargo.toml  README.md
i18n_inflector/benches/: inflector.rs
i18n_inflector/src/: error.rs  language_rules.rs  lib.rs  locale.rs  pluralize.rs  registry.rs  singularize.rs
i18n_inflector/src/languages/: aa.rs  ab.rs  ae.rs  af.rs  ak.rs  am.rs  an.rs  ar.rs  as.rs  av.rs  ay.rs  az.rs  ba.rs  be.rs  bg.rs  bi.rs  bm.rs  bn.rs  bo.rs  br.rs  bs.rs  ca.rs  ce.rs  ch.rs  co.rs  cs.rs  cu.rs  cv.rs  cy.rs  da.rs  de.rs  dv.rs  dz.rs  ee.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  eu.rs  (+128 more)
