[workspace]
default-members = [
    "i18n_inflector",
]
members = [
    "i18n_inflector",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["internationalization", "localization", "no-std"]
edition = "2024"
keywords = ["inflector", "internationalization", "localization", "i18n", "l10n"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/i18n-inflector"
rust-version = "1.92.0"
version = "0.1.1"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
large_stack_arrays = "allow"
result_large_err = "allow"

[workspace.dependencies]
criterion = "0.8.2"
phf = { version = "0.13.1", default-features = false }
